Fix header stripe causing horizontal space to overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ header::after {
   display: block;
   content: "";
   height: 1000px;
-  width: 100vw;
+  width: 100%;
   position: absolute;
   top: -700px;
   z-index: -1;
